completed new sign up page. Login page sign in with google text overflow fixes

--- a/src/views/LoginSignup/LoginPage.css
+++ b/src/views/LoginSignup/LoginPage.css
@@ -26,7 +26,7 @@
 @media (min-width: 750px) {
   /* tablet, landscape iPad, lo-res laptops ands desktops */
 }
-@media (min-width: 1025px) {
+@media (min-width: 1024px) {
   /* big landscape tablets, laptops, and desktops */
 }
 @media (min-width: 1281px) {
